--- a/css/sass/partials/_layout.scss
+++ b/css/sass/partials/_layout.scss
@@ -62,6 +62,10 @@
                 // color: $primary-colour;
                 filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, .6));
                 width: 80%;
+
+                @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { 
+                    margin: 10px auto 20px;
+                }        //IE11 specific media query
             }
 
             button {
