--- a/css/sass/partials/_styles.scss
+++ b/css/sass/partials/_styles.scss
@@ -414,14 +414,14 @@ body {
     height: 100%;
 }
 
-.bg-fix {
+.bg-fix, .bg-fix2 {
     height: 100%;
 }
 
 .secondary-wrapper {
     // width: 100%;
     // margin-left: 336px;
-    height: 100%;
+    // height: 100%;
 
     margin: 0px auto 0px 336px;
     padding: 50px 0px;
